:nail_care: Fix slight shift

--- a/styles/index.module.css
+++ b/styles/index.module.css
@@ -20,13 +20,14 @@
 .herocards {
   display: flex;
   gap: var(--gap-med);
-  max-width: 72rem;
+  max-width: 75rem;
   margin: 0 auto;
   padding: var(--gap-double) var(--gap-med);
   overflow: scroll;
   height: auto;
   justify-items: center;
   scrollbar-width: none;
+  height: 100%;
 }
 
 .card {
@@ -40,7 +41,7 @@
   border-radius: var(--radius);
   padding: var(--gap-med);
   box-shadow: var(--shadows);
-  width: 22rem;
+  min-height: 100%;
 }
 
 .cardTitle,
@@ -123,7 +124,7 @@
   .hero {
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    margin: var(--gap-quarter) auto;
     gap: 0;
   }
   .heroreverse,
@@ -139,19 +140,16 @@
     min-width: 0px;
     max-width: 320px;
   }
-  /* .herocardsWrapper {
-    padding-right: var(--gap-med);
-    margin-right: var(--gap-med);
-  } */
-  .herocards {
-
-  }
-
   .card {
-    width: 20rem;
+    min-width: 20rem;
+    max-width: 20rem;
+    min-height: 100%;
   }
-  .lastcard {
+  .herocards:last-child {
     padding-right: var(--gap-med);
+  }
+  .herocards {
+    padding-right: var(--small-double);
   }
   .title {
     font-size: 3rem;
